<resources>
    <string name="app_name">LoggandChat</string>
    <string name="start_page_activity">Start Page Activity</string>
    <string name="welcome_to_main_activity">Welcome to main Activity</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="need_new_account">Need New Account</string>
    <string name="this_is_login_activity">This is Login Activity</string>
    <string name="this_is_register_activity">This is register activity</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="log_in">Log in</string>
</resources>
