<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register_page"
    tools:context="android.mahmoud.com.loggandchat.RegisterActivity">
    <include
    layout="@layout/app_bar_layout"
    android:id="@+id/register_toolbar"/>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/create_account_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="197dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/register_name"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textMultiLine|textWebEmailAddress" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text|textMultiLine|textPassword" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="12dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/colorPrimary"
        android:text="@string/create_account"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>
